--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
     "react": "^16.3.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
